--- a/test2/style.css
+++ b/test2/style.css
@@ -1,45 +1,74 @@
 * {
   margin: 0;
-  top: 0;
-  padding: 0;
+  /* top: 0; */
+}
+
+header {
+  min-height: 200px;
+  background-image: url("./img/Headersembig.png");
+  background-repeat: no-repeat;
+  background-size: 990px;
+  height: 100%;
+}
+
+.imagem_header {
+  width: 100px;
+  margin-top: 30px;
+}
+
+img {
+  width: 100%;
+  max-width: 100%;
 }
 
 .angry-grid {
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  gap: 0px;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+  padding: 0 40px 0 40px;
 }
 
 #item-0 {
-  background-image: url("./img/nfr.png");
-  background-repeat: no-repeat auto;
-  grid-column: 2 / 5;
-  grid-row: 1 / 3;
-  height: 220px;
+  /* background-image: url("./img/nfr.png"); */
+  background-repeat: no-repeat;
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
+  /* height: 250px; */
 }
+
+span {
+}
+
+.titulo {
+  display: flex;
+  font-size: 32px;
+  font-weight: bold;
+  max-width: 100%;
+}
+
 #item-1 {
-  grid-row-start: 1;
+  /* grid-row-start: 1;
   grid-column-start: 3;
   grid-row-end: 2;
-  grid-column-end: 4;
+  grid-column-end: 4; */
 }
 
 #item-3 {
-  background-image: url("./img/nba.png");
-  width: 100%;
-  height: 100p0x;
-  grid-row-start: 4 / 5;
-  grid-column-start: 2;
+  /* background-image: url("./img/nba.png"); */
+  /* width: 100%;
+  height: 100px; */
+  /* grid-row-start: 4 / 5;
+  grid-column-start: 2; */
 
-  grid-row-end: 5;
-  grid-column-end: 3;
+  /* grid-row-end: 5;
+  grid-column-end: 3; */
 }
 #item-4 {
-  background-image: url("./img/wpp.png");
-  grid-row-start: 4;
-  grid-column-start: 4;
+  /* background-image: url("./img/wpp.png"); */
+  /* grid-row-start: 4;
+  grid-column-start: 4; */
 
-  grid-row-end: 5;
-  grid-column-end: 5;
+  /* grid-row-end: 5;
+  grid-column-end: 5; */
 }
